--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@supabase/supabase-js": "^2.89.0",
     "critters": "^0.0.23",
+    "exceljs": "^4.4.0",
     "formidable": "^3.5.4",
     "framer-motion": "^12.23.26",
     "next": "15.3.8",
