--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "exceljs": "^4.4.0",
     "formidable": "^3.5.4",
     "framer-motion": "^12.23.26",
+    "html2canvas-pro": "^2.0.1",
+    "jspdf": "^4.2.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.562.0",
     "next": "15.3.8",
