Контракты: генерация PDF, отчёты, платёжная модалка, правки UI

--- a/package.json
+++ b/package.json
@@ -20,21 +20,28 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@fontsource/pt-sans": "^5.2.8",
     "@marsidev/react-turnstile": "^1.4.2",
+    "@react-pdf/renderer": "^4.3.2",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
     "@types/jszip": "^3.4.0",
     "critters": "^0.0.23",
+    "docxtemplater": "^3.68.3",
+    "docxtemplater-image-module-free": "^1.1.1",
     "exceljs": "^4.4.0",
     "formidable": "^3.5.4",
     "framer-motion": "^12.23.26",
     "html2canvas-pro": "^2.0.1",
     "jspdf": "^4.2.0",
     "jszip": "^3.10.1",
+    "libreoffice-convert": "^1.8.1",
     "lucide-react": "^0.562.0",
+    "mammoth": "^1.11.0",
     "next": "15.3.8",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.12",
+    "pizzip": "^3.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-easy-crop": "^5.5.6",
@@ -46,6 +53,7 @@
     "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-pdf": "^6.2.0",
     "autoprefixer": "^10.4.23",
     "cssnano": "^7.1.2",
     "dotenv": "^17.2.3",
