--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,12 @@
 {
   "name": "thqlabel",
   "short_name": "thqlabel",
-  "description": "thqlabel - Музыкальный лейбл",
+  "description": "thqlabel - Музыкальный лейбл. Дистрибуция, маркетинг, PR и синхронизация.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#08080a",
   "theme_color": "#6050ba",
+  "lang": "ru",
   "icons": [
     {
       "src": "/favicon.png",
@@ -16,6 +17,23 @@
       "src": "/icon.png",
       "sizes": "192x192",
       "type": "image/png"
+    },
+    {
+      "src": "/icon.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/icon.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
